--- a/template.yml
+++ b/template.yml
@@ -38,3 +38,18 @@ Resources:
           Properties:
             Path: /
             Method: post
+
+  GetDate:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: com.aws.codestar.projecttemplates.handler.DateHandler
+      Runtime: java8
+      Role:
+        Fn::ImportValue:
+          !Join ['-', [!Ref 'ProjectId', !Ref 'AWS::Region', 'LambdaTrustRole']]
+      Events:
+        GetEvent:
+          Type: Api
+          Properties:
+            Path: /date
+            Method: get
