--- a/template.yml
+++ b/template.yml
@@ -12,7 +12,7 @@ Resources:
   GetHelloWorld:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: com.aws.codestar.projecttemplates.handler.HelloWorldHandler
+      Handler: com.aws.codestar.projecttemplates.handler.HelloWorldHandler::handleRequest
       Runtime: java8
       Role:
         Fn::ImportValue:
@@ -24,6 +24,21 @@ Resources:
             Path: /
             Method: get
 
+  GetHelloWorldES:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: com.aws.codestar.projecttemplates.handler.HelloWorldHandler::handleRequestES
+      Runtime: java8
+      Role:
+        Fn::ImportValue:
+          !Join ['-', [!Ref 'ProjectId', !Ref 'AWS::Region', 'LambdaTrustRole']]
+      Events:
+        PostEvent:
+          Type: Api
+          Properties:
+            Path: /
+            Method: get
+            
   PostHelloWorld:
     Type: AWS::Serverless::Function
     Properties:
