--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn package shade:shade
+      - mvn -T 1C package shade:shade
       - mv target/HelloWorld-1.0.jar .
       - unzip HelloWorld-1.0.jar
       - rm -rf target tst src buildspec.yml pom.xml HelloWorld-1.0.jar
